# PRI-Projects

./: .gitignore  README.md  pyrightconfig.json
Assignment 1/: .pre-commit-config.yaml  README.md  pyproject.toml
Assignment 1/scripts/: test_mp_memory_limit.py
Assignment 1/src/sapien/: reader.py
Assignment 1/src/sapien/core/: limit_memory.py
Assignment 1/src/sapien/entrypoints/: asgi.py  cli.py
Assignment 1/src/sapien/entrypoints/api/: app.py  model.py
Assignment 1/src/sapien/entrypoints/api/routes/: search.py
Assignment 1/src/wifear/: __init__.py  reader.py
Assignment 1/src/wifear/core/: limit_memory.py  load_db.py  logger.py  model.py  searcher.py  spimi.py  tokenizer.py
Assignment 1/src/wifear/entrypoints/: asgi.py  cli.py
Assignment 1/src/wifear/entrypoints/api/routes/: search.py
Assignment 1/static_pages/: index.html
Assignment 2/: README.md  pyproject.toml  report.md
Assignment 2/data/: README.md
Assignment 2/scripts/src/wifear/: reader.py
Assignment 2/scripts/src/wifear/entrypoints/: asgi.py
Assignment 2/scripts/src/wifear/entrypoints/api/: app.py  model.py
Assignment 2/scripts/src/wifear/entrypoints/api/routes/: healthcheck.py  search.py
Assignment 2/src/wifear/core/: load_db.py  searcher.py  spimi.py
Assignment 2/src/wifear/entrypoints/api/: app.py  model.py
Assignment 2/src/wifear/entrypoints/api/routes/: search.py
Assignment 2/static_pages/: document.html  index.html
